@@ -8,23 +8,13 @@ DIST launchy-2.4.2.gem 28672 SHA256 3b22fd75759a8af480e1a7545c17e10eada3146605e1
 DIST launchy-2.4.3.gem 29184 SHA256 42f52ce12c6fe079bac8a804c66522a0eefe176b845a62df829defe0e37214a4 SHA512 7c3e0377c9a310b2e7a4d1544b4790f6f959d24b6aba91660e979eb943f4bee641e0b5a44687b693ffe99304ceb96a9a6cf9fed142e231af01135bd2b73321d6 WHIRLPOOL 3845161e674d2369a3a95e1b3127e4f186849c5130dd0c29dcf4fa2cf2760a46db88f8411652be3655fdf6649bec40b6f9034cdaff8ca73b6fc56c9366e648c2
 EBUILD launchy-2.3.0-r1.ebuild 802 SHA256 bdcdaeba8f7cbba1d8ca7eedf734a309d2d2d9640918a278e118886da47d365c SHA512 214566e27c2bd4e13c03645e381136776b2f5c5b845890014e9d0a1c3474b4fed5c1f61c4d1318f73664532cdb27a19de460e9d856c5f46efa2d2850aa22fc5b WHIRLPOOL e4504dff4f63d58492a3c330a2cc8b7699a524b24cb36d9c7a84c310b82eb41a6d169883790d93e331b53f8d39891b65e1a714d6c773057421f1d67963311e20
 EBUILD launchy-2.4.2.ebuild 1107 SHA256 7475234994538b947831af03f020d1e5c3d6733fbb733d83f58b478133ce2545 SHA512 fffa276c8f743a522482c4b3eb342dafa0fcdc9590ff82fe4ac7109888a9fa20c6ce8749e7bd7e176a4ec4dcc168afbb1814940c11844008e51876a7eb1376d9 WHIRLPOOL e81fc29f3bd6fac609981db144190d0ccd2996f74b206c11f03cc24a468916b7601508bbbe2c9baf8705eb778aa2dde5baf3d730331e8026da2c4219d41f6517
-EBUILD launchy-2.4.3.ebuild 1116 SHA256 b8f5b09575f295922afd5ed3b5192fd68851c8135ae9fc1498099c3a4bb696eb SHA512 a8124d1c8011e09e84898566f1b17534cfcf00ee58642ca9c95b584ee5d48d7d2fa5e110ad656fe0da3deee49d21ee321103d17b3d024ac258b36f2d6c10ec52 WHIRLPOOL aa4b202e839591e0eb2ba65420a081b882eb0adda6b50ace5b25aaec7b56e64a8565a11f4149e6b165013e9538b85de224b04fca37847369f71c75aaf94f9038
-MISC ChangeLog 1081 SHA256 1f207fc5eedf0f3a2684c7485d125e31a1880b2eea9cb75fb82e207100c633bd SHA512 f49b6937e40a9d46b51030de0d526aafd38973d2741df5f08b3bc83adda3fb29ff29a36801f82db02497bd81491041a0b47cb971b30512b3d5bac3df88b711c0 WHIRLPOOL 4ee0d3880d8bfb300763cadaa9919734429f4bd07ce4f3abe0f0786ceccdb9076f81eacdda59f8bea1c63fc8b4864c5f35c6494fcaf7e3816b677190bc20801d
+EBUILD launchy-2.4.3.ebuild 1126 SHA256 4b01ef09a613612d45fc186824536a272ff7e7894725735fc38d88ecc3e0ba59 SHA512 36a7a4561f5257863553284a6115d5c7a9004b987a0ff30c7ca936052d2416de58671e43bf8be0842a9403d272f242958dbe869b3a9f9afb366c8fa017b5d958 WHIRLPOOL 2f018c010313e2bb634ba461e0b6b260637f7de792c47707ad6031f32d4be98b790683cad4ccd9df4022f45f3519ad615d6fdc7f753638be07f8cb5c134f0066
+MISC ChangeLog 1171 SHA256 380756b5c08176280852ccefa7bd62d8b42fa3bfa01ceb5768c00303d9241d9b SHA512 144fb12cf8dc6cc750c6e86c1cb10bff2c3f2cf6f62a6f0fcb31febb7233985f120854a9444341e7e1700f93a34718f87326d46edb7e40f75e43778176f55953 WHIRLPOOL ebc08e4b9bf996f2c709ace9ab05ad61be094fd9957113b2b6371273b160c618d2246e2c0660427920667d1358941c3840e5266d837965968af9be13598b1bce
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVAHPdAAoJELp701BxlEWf8yAQAJvmM4ti4xGUBlBxbFHkhdEl
-Tn1jUppR2LnFup2x34TJX3IivNg6qrjsaxMLE+BxAw3WhRSdqUS6evucNqKS9bXW
-sCdYoe9u2k4gKMw+LdtNrfLBBuX6+M/sGDKfTucuQdyV+I6PqlbK01oSbobBLNNB
-dwIeX/z57zb58wy0xpIUKWJxfOr70IlRHED281iGxL+MFgtgGl99ZL1h7IqSHiWc
-HI540vVrYZ0ah6hfsVta5E1jmJhNz6299KRba3mcYlv+XuVbnQ5uKI0LHOsXV4YW
-wXXoHFD9zpnWwiwZAO4mss8+W4nLzOfchf5z1w08LXuC0I3Eh9lmQtuaNb0iBkb9
-QBBM0X4eRgXb+OO7ag7+RhMuLV/XDi4bmKVfdnmc7XSDMVdYDMqvGkLWFmPs+qqv
-kjJRHCoHnbXbwjBQnSe3JtkO+4zeR+rsRH8UluU4Z7Lqvi/Mj19vbm3AgAnbwCvx
-3UfMre4XRR8bAF4q3oOaaxIRrAArKyCxDC6+PpC40Qjga4Tf8F4kfzk7KM3Pzmhn
-IAweHttQzdB4RMJvK/zCEMUDKJ6vn+7prNzH2pjBxPSUuCHPwRymlDnXceZ0lgfo
-cJIVreVMAJ60m57YgAE9QJXMSBqeWq9Dg/STl17JWxuw1eToeWT+AzlDWCY95moG
-+DwCxxP4MSECyXmS6GrH
-=UyqP
+iF4EAREIAAYFAlUo3dcACgkQiIP6VqMIqNcl6gD+KNJhMyRO8hwlcT6dguJIjc/j
+Ebmrev/C7aZt07xwskYA/3Kdas72NAcYAGujF6eDoKHGxRo6+S21LYdQUrHB7rPH
+=RIBo
 -----END PGP SIGNATURE-----
