@@ -1,9 +1,9 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/launchy/launchy-2.4.3.ebuild,v 1.2 2015/03/11 16:57:00 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/launchy/launchy-2.4.3.ebuild,v 1.3 2015/04/11 08:39:50 graaff Exp $
 
 EAPI=5
-USE_RUBY="ruby19 ruby20 ruby21"
+USE_RUBY="ruby19 ruby20 ruby21 ruby22"
 
 RUBY_FAKEGEM_EXTRADOC="README.md HISTORY.md"
 
