@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST liquid-2.6.1.gem 46592 SHA256 fdecc5c4d1dfa3d81eaef83546c64b238d8c89a2a63006b8860574333a3b8639 SHA512 6a0138f8a85125db457b947c4cafbabf35c5cb6ccd47951eb9d3afdc447a72848aba314d747a2f1222f21750aa40283c2e1737cbde2b8e60a84b26e946302ac3 WHIRLPOOL 3deffc537858f48f11a881d5c83df33e057095dbc98da8ca04a0c71155523ff578633676c8a02f0e7be97e0e231202b3067cc18903fe0921a65007b2b80d402c
 DIST liquid-2.6.2.gem 46592 SHA256 eb3b8b674f0b2b0960a9a126ad83d2e35cc4df32ab5d0cc7dee75bfef5e9f4cc SHA512 bd369fe2e9bd89013f9bbd4a7f721b2db4376ac02c5ea4b4da6a08fa6af24fe782fae38b32d250edde548980f042c7187a673da47fa8d5569ed0959fd1569827 WHIRLPOOL 29c48155c7e43c0fd0ec7c3a61960b7fcfee322dbce4e6faf85c25cd75afa0c99e4504027524f92aa9c958be874ffa021c4228174fd1154f01772a3259bd2232
 DIST liquid-3.0.1.tar.gz 87563 SHA256 b51bdf121d44962c52e0cef5b23c43914dd36a0aa4f4bd2337bb8b7b9b9df61c SHA512 a728851cb25e7f50f0085e11918a5829603ec0b9fbfa55324253064a4839700edcf9f84e8b646a9df5578f3c8096be71adffdf6f34274cceab899a3ee936fd93 WHIRLPOOL c1d88c25b50e87b2e48ae36fcf2df51cb5c8eb00fe7830fa4e0d55815a3c18f1aecc4f479ab0d817867999e1dff979963c91abcab0ae80b1998bd2275fdaa71c
 EBUILD liquid-2.6.1-r1.ebuild 657 SHA256 ff1be7e2c73b0119c9fdfd2d57d0c728f08c6b7621f2fafeedd51c896d258f3c SHA512 cc173b00dcf56db0eaae55697dcd0f55ca74ee1f86cb8c4d0af7ff08950f8042b1a04900b052bc2b9e03ae9ce1986ee3c6a061ce5fd36fbb9d27f88864d57ab4 WHIRLPOOL 41dbbb051e4f90976aeaace5ef26070440262999418dd3084c77f76ea8a725778a9e0c7caa746e7d3c20965b2515737dbd60a71aca9e4655182aada7e0472295
-EBUILD liquid-2.6.2.ebuild 654 SHA256 2ccd78e82d89bda5d5bfd4955e668800a5e3b4c823efc3f2762b28753090ecfc SHA512 7072123c6b67b4bf311a2459b174fd890328c97cf711e86cb1f5b44bb7cc98bd012d4bb8d194bc776b956e67a56db382cbbc10eb98eaa1535c6d4657fae72f62 WHIRLPOOL 95f1d3c18179cc2d244f04d22a32fd4fc1477ad0dae40f6237aa75d0b6673b17f6d5adbf06fa3e537677702fb4cf3dcd869f5bef7857e4bba03992255c6976d6
+EBUILD liquid-2.6.2.ebuild 662 SHA256 b6a88baeb32228b9732e26115cd41ffbdc3d62194340c8a4f18aab6e5037a51c SHA512 40b8a223ae14368dddd9b2f29a4f19dc500a026393c04e487f825daa501f9f342eb95d58be41c76c028fca0d4a84902166b7bb824af89c29a410a7bf3f43285b WHIRLPOOL 51d6b5a53e5844b221996bf69bede4a5964931816fe0ef51cd88849352dde909e32e3067d971390ef4f5e1efb7c633791b7f83ba3028fe2b58fed0c8f63836b9
 EBUILD liquid-3.0.1.ebuild 621 SHA256 17578d4e732de111cc4cd6f3f07697434fe68db39463f132b5183543da5b7a37 SHA512 d97ffc137284f95f83bc00b5b6d8dfd4da8f13c5ec388d0efc56a46264eba2d6e5e074ece27168c3df6fe0fb47c187fb3c3cb268cf7505606db91a2ddb10d493 WHIRLPOOL 70d28dc7d56a04ff249098d348a6566542d75244f40e7087dc6d5b811faf90cb001461fc2dd6bb441d1444f31354585ee687ac3ea10675e8585161c0878af5f5
-MISC ChangeLog 4624 SHA256 9ba506be61c4f821f83a7645b0eff1ec6340a85b70d8e900659ce4c2fbffaf7b SHA512 7583e4d02f2f9b6ea9a554bf905b55151664b3f37bd55ce849fdb94d0464748d5cfa3616cd8fcaf15008dd8ba2810e13780afcb17316681554f2f6ece131252e WHIRLPOOL 825ab4a6065f1ae5c1eeaf97faa542d3581b35bc56e3a5e7fecd3083c6b859584961a001f614b2c520faf689ea31966a95e22601994827f9ca77adf9df7c7645
+MISC ChangeLog 4711 SHA256 e2f988c9ec6cc043c9e8fc9f9c3d96b881a1d38de3b7020d7de251e660b36d4c SHA512 31118b81319c80f12769f686f6acb3a495d2c3977bd4dbcbc6d08c44c91e59fe489b99ef3ae9ecd3027886f40e6e9aaf004107382118c7a85ca72f5558e6bdb3 WHIRLPOOL 5e449fa0e0ec9130073ef61756c05e44d0a1bca100b5334540dd54f05df1864a956c2a2e340854d8547871047db0287a11ffe811c563246f7fdd54b6eb155b4a
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlUo3hYACgkQiIP6VqMIqNfs3AD/XjaBRVkgq2UNWOH3Q1iue2vw
+1lQc9dfUt1Dn8wVIMpEA/1OT9VMnyxPdyF2E+GOYhnr+ZnUd2B4UE2u3LZyTcd7h
+=088E
+-----END PGP SIGNATURE-----
