@@ -1,9 +1,9 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/liquid/liquid-2.6.2.ebuild,v 1.1 2015/01/25 08:48:28 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/liquid/liquid-2.6.2.ebuild,v 1.2 2015/04/11 08:40:53 graaff Exp $
 
 EAPI=5
-USE_RUBY="ruby19 ruby20 ruby21"
+USE_RUBY="ruby19 ruby20 ruby21 ruby22"
 
 RUBY_FAKEGEM_TASK_DOC=""
 RUBY_FAKEGEM_TASK_TEST=""
