@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/liquid
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/liquid/ChangeLog,v 1.20 2015/01/25 08:48:28 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/liquid/ChangeLog,v 1.21 2015/04/11 08:40:53 graaff Exp $
+
+  11 Apr 2015; Hans de Graaff <graaff@gentoo.org> liquid-2.6.2.ebuild:
+  Add ruby22.
 
 *liquid-2.6.2 (25 Jan 2015)
 
