@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/launchy
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/launchy/ChangeLog,v 1.6 2015/03/11 16:57:00 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/launchy/ChangeLog,v 1.7 2015/04/11 08:39:50 graaff Exp $
+
+  11 Apr 2015; Hans de Graaff <graaff@gentoo.org> launchy-2.4.3.ebuild:
+  Add ruby22.
 
   11 Mar 2015; Agostino Sarubbo <ago@gentoo.org> launchy-2.4.3.ebuild:
   Add ~x86, wrt bug #510614
